# winapp-cpp-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  TUTORIAL.md  app.manifest  appxmanifest.xml  devenv.ps1  main.cpp  winapp.yaml
component/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.idl  pch.h
examples/HelloWorldApp/: CMakeLists.txt  README.md
examples/HelloWorldApp/src/: main.cpp
examples/SampleApp/: CMakeLists.txt  README.md
examples/SampleApp/src/: main.cpp
winappCLI/: README.md  winappCLI.bat  winappCLI.py  winappCLI.sh
